k3s/ba-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ba-backend
  name: ba-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ba-backend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: ba-backend
    spec:
      containers:
      - args:
        - ./run_docker.sh
        image: neilschark/ba-website:ba-backend
        imagePullPolicy: Always
        name: ba-backend
        ports:
        - containerPort: 1337
        resources: {}
        workingDir: /backend
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
