k3s/ba-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ba-backend
  name: ba-backend
spec:
  ports:
  - name: "1337"
    port: 1337
    targetPort: 1337
  selector:
    io.kompose.service: ba-backend
status:
  loadBalancer: {}
