k3s/ba-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ba-nginx
  name: ba-nginx
spec:
  ports:
  - name: "1337"
    port: 1337
    targetPort: 1337
  selector:
    io.kompose.service: ba-nginx
  type: LoadBalancer
status:
  loadBalancer: {}
