k3s/ba-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ba-postgres
  name: ba-postgres
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    io.kompose.service: ba-postgres
status:
  loadBalancer: {}
